Removed original LVM/microcloud integration

--- a/cookbooks/10xeng-node/files/default/lxc-net.conf
+++ b/cookbooks/10xeng-node/files/default/lxc-net.conf
@@ -4,12 +4,12 @@ author "Serge Hallyn <serge.hallyn@canonical.com>"
 start on starting lxc
 stop on stopped lxc
 
-env USE_LXC_BRIDGE="false"
+env USE_LXC_BRIDGE="true"
 env LXC_BRIDGE="lxcbr0"
-env LXC_ADDR="10.0.3.1"
-env LXC_NETMASK="255.255.255.0"
-env LXC_NETWORK="10.0.3.0/24"
-env LXC_DHCP_RANGE="10.0.3.2,10.0.3.254"
+env LXC_ADDR="172.16.1.1"
+env LXC_NETMASK="255.240.0.0"
+env LXC_NETWORK="172.16.0.0/12"
+env LXC_DHCP_RANGE="172.16.1.2,172.16.1.254"
 env LXC_DHCP_MAX="253"
 env varrun="/var/run/lxc"
 
@@ -39,7 +39,7 @@ pre-start script
 	brctl addbr ${LXC_BRIDGE}
 	ifconfig ${LXC_BRIDGE} ${LXC_ADDR} netmask ${LXC_NETMASK} up
 	iptables -A POSTROUTING -s ${LXC_NETWORK} -t nat -j MASQUERADE
-	dnsmasq -u lxc-dnsmasq --strict-order --bind-interfaces --pid-file=${varrun}/dnsmasq.pid --conf-file= --listen-address ${LXC_ADDR} --dhcp-range ${LXC_DHCP_RANGE} --dhcp-lease-max=${LXC_DHCP_MAX} --dhcp-no-override --except-interface=lo --interface=${LXC_BRIDGE} --dhcp-script=/usr/local/bin/10xeng-lease || cleanup
+	dnsmasq -u lxc-dnsmasq --strict-order --bind-interfaces --pid-file=${varrun}/dnsmasq.pid --conf-file= --listen-address ${LXC_ADDR} --dhcp-range ${LXC_DHCP_RANGE} --dhcp-lease-max=${LXC_DHCP_MAX} --dhcp-no-override --except-interface=lo --interface=${LXC_BRIDGE} || cleanup
 	touch ${varrun}/network_up
 end script
 
